--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,9 @@ dependencies:
   # Bottom Navigation
   curved_navigation_bar: ^1.0.3
 
+  # Url Launcher
+  url_launcher: ^6.0.12
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
