--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   # Firebase Storage
   firebase_storage: ^10.2.17
 
+  # Firebase Auth
+  firebase_auth: ^3.3.20
+
   # Path Provider to Download File
   path_provider: ^2.0.11
 
