--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
     android:maxSdkVersion="28" />
 <!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" /> -->
-<uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+<!-- <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/> -->
 
 <queries>
     <intent>
